# Project2MindMap

./: .env.example  .gitignore  LICENSE  LLM_Wiki_InitPrompt.txt  LLM_Wiki_UpdatePrompt.txt  NOTICE  README.md  plan.md  project2mindmap_schema.sql
backend/: pyproject.toml
backend/app/: __init__.py  constants.py  database.py  main.py  models.py  runtime.py  schemas.py
backend/app/cli/: manage.py
backend/app/routes/: databases.py  export.py  ingestion.py  projects.py
backend/app/services/: database_profiles.py  database_service.py  edit_service.py  ingestion_service.py  query_service.py  seed_service.py  validation.py
backend/tests/: conftest.py  test_api.py  test_database_service.py  test_ingestion.py  test_llm_wiki_api.py  test_seed_validation.py
docs/: README.md  llm_wiki_workflow.md  manual_acceptance.md  outline_doc_format.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: Spotlight.tsx
frontend/src/components/primitives/: CatPill.tsx  SkeletonBlock.tsx  StatusDot.tsx
frontend/src/styles/: catTokens.ts  tokens.css
frontend/src/utils/: keymap.ts  progress.ts  suggestions.ts
frontend/src/views/Atlas/: AtlasCanvas.tsx  AtlasHUD.tsx  AtlasNodeRail.tsx  AtlasView.tsx  LensRail.tsx  useAtlasSimulation.ts
frontend/src/views/Focus/: BreadcrumbRail.tsx  ConnectionsRail.tsx  FocusView.tsx  ReadingColumn.tsx
scripts/: build-ui.ps1  check-runtime.ps1  start.ps1
(+23 files in other folders)
