[project]
name = "project2mindmap-backend"
version = "0.1.0"
description = "Local-first research knowledge-map backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic",
  "sqlalchemy",
  "typer",
  "uvicorn",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
